# hcwc

./: .$Untitled Diagram.drawio.bkp  .$hcwc_infra.drawio.bkp  hcwc_infra.drawio
server/: Cargo.toml  python_client.py
server/src/: chat_server.rs  chat_session.rs  connections_manager.rs  main.rs  mq_messages.rs  requests.rs  responses.rs  subscriber.rs
server/src/cache/: base.rs
worker/: Cargo.toml
worker/src/: main.rs
