[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
redis = { version = "*", features = ["r2d2", "tokio-comp"] }
futures = "0.3.30"
r2d2 = "0.8.10"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = "1.38.0"
bytes = { version = "1.6.0", features = ["serde"] }
async-nats = "0.35.1"
futures-util = "0.3.30"
nats = "0.25.0"
