[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35.1"
bytes = "1.6.0"
futures-util = "0.3.30"
nats = "0.25.0"
rust = "0.0.1"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
redis = { version = "*", features = ["r2d2", "tokio-comp"] }
